<resources>
    <string name="app_name">Toast</string>
    <string name="hello_toast">Toast</string>
    <string name="apa_kabar">Sayang kamu</string>
    <string name="button_label_toast">Toast</string>
    <string name="button_label_hitung">Hitung</string>
    <string name="hitung_initial_values">0</string>
    <string name="toast_pesan">Hebat Bro!</string>
    <string name="text_edit">Edit Pesan</string>
    <string name="hitungan">Menghitung</string>
    <string name="button_count">count</string>
    <string name="button_back">Back</string>
</resources>